--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <link rel="text/css" href="<%= BASE_URL %>animate.css">
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <link rel="text/css" href="<%= BASE_URL %>animate.css" />
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
